<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            app:srcCompat="@drawable/sendicon" />

        <TextView
            android:id="@+id/textmobileotpverify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/acme"
            android:text="@string/mobile_otp_verification"
            android:textAlignment="center"
            android:textColor="@color/colortextfirst"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/textsecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/we_will_send_you_an_one_time_otp_on_this_given_n_mobile_number"
            android:textAlignment="center"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:gravity="center"
            android:background="@drawable/bgbox"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="+91 "
                android:textColor="@color/colortextfirst"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/input_mobile_number"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/_9565879876"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/colortextfirst"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttongetotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_otp"
            android:layout_margin="30dp"
            android:textColor="@color/colortextfirst"
            android:textStyle="bold"
            android:background="@drawable/bgbtncolor"/>
        <ProgressBar
            android:id="@+id/progressbarcircle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    
</FrameLayout>

    </LinearLayout>



</ScrollView>