<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".OtpVerification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:srcCompat="@drawable/receiveicon" />

    <TextView
        android:id="@+id/otpverify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/acme"
        android:text="@string/otp_verification"
        android:textAlignment="center"
        android:textColor="@color/colortextfirst"
        android:textSize="20sp"/>
        <TextView
            android:id="@+id/otp1sttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/please_enter_otp_sent_to_you"
            android:textAlignment="center"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/textshowmobilenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textColor="@color/colortextsecond"
            android:textSize="14sp"
            android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">
        <EditText
            android:background="@drawable/bgbox"
            android:id="@+id/inputotp1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colortextfirst"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

        <EditText
            android:id="@+id/inputotp2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bgbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colortextfirst"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor" />
        <EditText
            android:id="@+id/inputotp3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bgbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colortextfirst"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bgbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colortextfirst"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bgbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colortextfirst"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/inputotp6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bgbox"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/colortextfirst"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="LabelFor"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/colortextsecond"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/textresendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/resend_otp_again"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colortextfirst"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/buttonverifyotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_margin="30dp"
            android:textColor="@color/colortextfirst"
            android:textStyle="bold"
            android:background="@drawable/bgbtncolor"/>

        <ProgressBar
            android:id="@+id/progressbarcircleotp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>

</ScrollView>